icmake (7.12.1-1) unstable; urgency=low

  * New upstream release

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 10 Feb 2009 18:38:47 +0100

icmake (7.11.1-1) unstable; urgency=low

  [ Frank B. Brokken ]
  * New upstream release

  [ George Danchev ]
  * Drop all patches, as they have been applied upstream
  * Drop dpatch from build-dependencies
  * Convert to machine-interpretable copyright format

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Aug 2008 21:04:33 +0200

icmake (7.11-2) unstable; urgency=low

  * Updated to standards 3.8.0, repaired incorrectly formatted copyright 
    notice and message about missing size_t.dptach message

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 16 Aug 2008 09:15:29 +0200

icmake (7.11-1) unstable; urgency=low

  * New upstream version
    (Closes: #414604, #450502, #437189)
  * Added Tony Mancill to Uploaders.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 08 Nov 2007 20:29:35 +0100

icmake (7.10-1) unstable; urgency=low

  * New upstream version

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 12 Mar 2007 19:51:15 +0100

icmake (7.02-1) unstable; urgency=low

  * Due to an oversight in the upstream version the icmbuild and icmstart
    scripts weren't installed. Repaired in this release, which also required a
    minor debian/rules file modification.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 21 Feb 2007 15:01:24 +0100

icmake (7.01-1) unstable; urgency=low

  * New upstream version requiring slight modification of `rules'

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 07 Feb 2007 16:22:56 +0100

icmake (7.00-1) unstable; urgency=low

  * New upstream version.

  [ George Danchev ]
  * Added Frank B. Brokken <f.b.brokken@rug.nl> and 
    George Danchev <danchev@spnet.net> to Uploaders
  * Added debian/watch file

  [ Frank B. Brokken ]
  * Removed patch-stamp from build-stamp target
  * Added doc/icmbuild.1 and doc/icmstart.1 to dh_installman